<resources>
    <string name="app_name">arnhss</string>
    <string name="splash_sub">BY COMPUTER ⚡️ SCIENCE 2021-23</string>
    <string name="onboard_title">Ar Nagar Hss- A complete educational institute</string>
    <string name="onboard_content"></string>
    <string name="onbaord_content">An Interface to share the Creative Works and Others \n By Ar Nagar Hss Students and Teachers. A Small\n Innovation By COMPUTER⚡️SCIENCE\n 2021-23.</string>
    <string name="get_started">Get Started</string>
    <string name="todo">TODO</string>
    <string name="sample"> </string>
    <string name="login_title">Login with Mobile Number</string>
    <string name="login_subtitle">Enter your mobile number to Continue</string>
    <string name="TOD">TODO</string>
    <string name="_91">+91</string>
    <string name="input_hint_for_phone_number">Enter your mobile number</string>
    <string name="terms_conditions_title">By continuing, you agree to our Terms of Terms of Service and Privacy Policy</string>
    <string name="india">India</string>
    <string name="code">+91</string>
    <string name="get_otp">Get OTP</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="choose_country_title">Choose your country</string>
    <string name="sorry_country_not_found">⚠️ Oops! Country not found! Please provide a valid country name or code. 🌍.</string>
</resources>