<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OnboardActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <ImageView
        android:id="@+id/onboard_image"
        android:layout_width="250sp"
        android:layout_height="350dp"
        android:src="@drawable/onboard"
        android:padding="10sp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/onboard_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingEnd="12dp"
        android:lineSpacingExtra="5dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/onboard_image"
        tools:ignore="RtlSymmetry"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/onbaord_content"
        android:textSize="15sp"
        android:padding="20dp"
        android:lineSpacingExtra="6dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom"
        />


</LinearLayout>