<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activities.LoginActivity">

    <View
    android:layout_width="wrap_content"
    android:layout_height="5dp"/>
    <include
        android:id="@+id/login_appbar"
        layout="@layout/appbar" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/login"
        android:layout_gravity="center"
        tools:ignore=""
        android:contentDescription="@string/TOD" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingEnd="12dp"
        android:lineSpacingExtra="5dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/onboard_image"
        tools:ignore="RtlSymmetry"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:layout_gravity="center"/>


    <include
        layout="@layout/custom_input"/>

</LinearLayout>