<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@drawable/input_rounded_background"
    android:layout_height="?attr/actionBarSize"
    android:layout_margin="20dp"
    app:circularflow_radiusInDP="20"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:gravity="center_vertical"
    >
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:foreground="@drawable/ripple_bg"
       android:clickable="true"
       android:focusable="true"
       android:padding="5dp"
       android:layout_gravity="center_vertical"
       android:gravity="center_vertical"
       android:layout_marginVertical="10dp"
       android:id="@+id/country_display"
>
       <TextView
           android:id="@+id/code"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/_91"
           android:layout_marginEnd="5dp"
           android:paddingStart="2dp"
           android:textColor="@color/black"
           tools:ignore="RtlSymmetry" />

       <ImageView
           android:id="@+id/flag"
           android:layout_width="15dp"
           android:layout_height="wrap_content"
           android:src="@drawable/india_flag"
           android:contentDescription="@string/sample" />

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:src="@drawable/down_icon"
           android:contentDescription="@string/sample"

           />

   </LinearLayout>

    <View
        android:layout_width="1.5dp"
        android:layout_height="wrap_content"
        android:background="#CFCFCF"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:textColorHighlight="@color/black"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:hint="@string/input_hint_for_phone_number"
        android:autofillHints="phone"
        android:inputType="phone"
        android:textSize="16sp"
        />

</LinearLayout>